--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "math": "^0.0.3",
     "quasar": "^2.0.0",
